Add: TopBar, fonts, colores

--- a/index.html
+++ b/index.html
@@ -4,11 +4,29 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Doggos PetShop</title>
+  <link rel="shortcut icon" href="assets/doggos.ico" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Inter&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  Hello World
+  <nav class="top-bar">
+    <div class="max-w">
+      <img src="./assets/doggos-black.svg" alt="Logo" height="40px">
+      <ul>
+        <li>Sobre nós</li>
+        <li>Serviços</li>
+        <li>Fareje-nos</li>
+      </ul>
+      <label class="switch">
+        <input type="checkbox">
+        <span class="slider"></span>
+      </label>
+    </div>
+  </nav>
 </body>
 
 </html>
