Add: theme button imgs

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
 <body>
   <nav class="top-bar">
     <div class="max-w">
-      <img src="./assets/doggos-black.svg" alt="Logo" height="40px">
+      <img src="./assets/logo-doggos.svg" alt="Logo" height="40px">
       <ul>
         <li>Sobre nós</li>
         <li>Serviços</li>
         <li>Fareje-nos</li>
       </ul>
-      <label class="switch">
+      <label class="button-switch">
         <input type="checkbox">
         <span class="slider"></span>
       </label>
