--- a/index.html
+++ b/index.html
@@ -50,18 +50,10 @@
           <img class="d-block w-100" src="./assets/img-dogs.png" alt="First slide" height="512px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Second slide" height="512px">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>...</h5>
-            <p>...</p>
-          </div>
+          <img class="d-block w-100" src="./assets/img-dogs.png" alt="Second slide" height="512px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="..." alt="Third slide" height="512px">
-          <div class="carousel-caption d-none d-md-block">
-            <h5>...</h5>
-            <p>...</p>
-          </div>
+          <img class="d-block w-100" src="./assets/img-dogs.png" alt="Third slide" height="512px">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -75,12 +67,20 @@
     </div>
   </section>
   <main class="main">
-    <section class="main__sobre-nos">
-      <img src="assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
-    <div class="main__sobre-nos__txt">
-      <h1 class="h1__sobre-nos">SOBRE NÓS</h1>
-      <p class="p__sobre-nos">Eduardo Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.</p>
-    </div>
+    <section class="main__sobre-nos max-w">
+      <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
+      <div class="main__sobre-nos__txt">
+        <h1 class="h1__sobre-nos">SOBRE NÓS</h1>
+        <p class="p__sobre-nos">Eduardo Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+          has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
+          type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
+          into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
+          of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
+          Aldus PageMaker including versions of Lorem Ipsum. It is a long established fact that a reader will be
+          distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is
+          that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',
+          making it look like readable English.</p>
+      </div>
     </section>
   </main>
 </body>
