--- a/index.html
+++ b/index.html
@@ -83,6 +83,28 @@
       </div>
     </section>
 
+      <!-- Divider -->
+  <div class="divider">
+
+    <div class="divider-content">
+      <img src="./assets/pata-white.svg" alt="" class="patinha" height="64px">
+
+      <div class="linha"></div>
+
+    </div>
+
+    <div class="dog-img">
+      <img src="./assets/cachorro pulando.svg" alt="" height="203px">
+    </div>
+
+    <div class="divider-content">
+      <div class="linha"></div>
+
+      <img src="./assets/pata-white.svg" alt="" height="64px">
+    </div>
+  </div>
+  <!-- Divider/End -->
+
     <section class="main__fareje">
         <h1>FAREJE-NOS</h1>
         <div class="main__fareje-content">
