--- a/index.html
+++ b/index.html
@@ -28,15 +28,19 @@
     <div class="max-w">
       <img src="./assets/logo-doggos.svg" alt="Logo" height="40px">
       <ul>
-        <li>Sobre nós</li>
-        <li>Serviços</li>
-        <li>Fareje-nos</li>
+        <li><a href="#sobrenos">Sobre nós</a></li>
+        <li><a href="#sobrenos">Serviços</a></li>
+        <li><a href="#sobrenos">Fareje-nos</a></li>
       </ul>
       <label class="button-switch">
         <input type="checkbox">
         <span class="slider"></span>
       </label>
+      <button><img src="./assets/menu-icon.svg" alt="button-sidebar" onclick=""></button>
     </div>
+  </nav>
+  <nav class="side-bar">
+    <div>aaaaaaaaaaaaaa</div>
   </nav>
   <section>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -83,44 +87,46 @@
       </div>
     </section>
 
-      <!-- Divider -->
-  <div class="divider">
+    <!-- Divider -->
+    <div class="divider">
 
-    <div class="divider-content">
-      <img src="./assets/pata-white.svg" alt="" class="patinha" height="64px">
+      <div class="divider-content">
+        <img src="./assets/pata-white.svg" alt="" class="patinha" height="64px">
 
-      <div class="linha"></div>
+        <div class="linha"></div>
 
+      </div>
+
+      <div class="dog-img">
+        <img src="./assets/cachorro pulando.svg" alt="" height="203px">
+      </div>
+
+      <div class="divider-content">
+        <div class="linha"></div>
+
+        <img src="./assets/pata-white.svg" alt="" height="64px">
+      </div>
     </div>
-
-    <div class="dog-img">
-      <img src="./assets/cachorro pulando.svg" alt="" height="203px">
-    </div>
-
-    <div class="divider-content">
-      <div class="linha"></div>
-
-      <img src="./assets/pata-white.svg" alt="" height="64px">
-    </div>
-  </div>
-  <!-- Divider/End -->
+    <!-- Divider/End -->
 
     <section class="main__fareje">
-        <h1>FAREJE-NOS</h1>
-        <div class="main__fareje-content">
-          <div class="main__fareje-content___maps">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.364551941345!2d-38.41595342408903!3d-12.948508859347045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7161a08d6aaa545%3A0x6e9ec1bfe72412b2!2sUniversidade%20Católica%20do%20Salvador%20-%20UCSal!5e0!3m2!1spt-BR!2sbr!4v1701300591266!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
-          </div>
-          <div class="main__fareje-content__right">
-            <p><strong>Endereço:</strong> Teacher Aguiar's Dick Avenue, N° 2589, Pituaçu, Salvador - BA </p>
-            <br>
-            <p><strong>CEP:</strong> 41740-090</p>
-            <img src="" alt="">
-          </div>
+      <h1>FAREJE-NOS</h1>
+      <div class="main__fareje-content">
+        <div class="main__fareje-content___maps">
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.364551941345!2d-38.41595342408903!3d-12.948508859347045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7161a08d6aaa545%3A0x6e9ec1bfe72412b2!2sUniversidade%20Católica%20do%20Salvador%20-%20UCSal!5e0!3m2!1spt-BR!2sbr!4v1701300591266!5m2!1spt-BR!2sbr"
+            allowfullscreen="" loading="lazy"></iframe>
         </div>
+        <div class="main__fareje-content__right">
+          <p><strong>Endereço:</strong> Teacher Aguiar's Dick Avenue, N° 2589, Pituaçu, Salvador - BA </p>
+          <br>
+          <p><strong>CEP:</strong> 41740-090</p>
+          <img src="" alt="">
+        </div>
+      </div>
     </section>
 
-    
+
   </main>
 </body>
 <script src="script.js"></script>
