--- a/index.html
+++ b/index.html
@@ -112,16 +112,15 @@
     <section class="main__fareje">
       <h1>FAREJE-NOS</h1>
       <div class="main__fareje-content">
-        <div class="main__fareje-content___maps">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.364551941345!2d-38.41595342408903!3d-12.948508859347045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7161a08d6aaa545%3A0x6e9ec1bfe72412b2!2sUniversidade%20Católica%20do%20Salvador%20-%20UCSal!5e0!3m2!1spt-BR!2sbr!4v1701300591266!5m2!1spt-BR!2sbr"
+        <div>
+          <iframe class="main__fareje-content___maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.364551941345!2d-38.41595342408903!3d-12.948508859347045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7161a08d6aaa545%3A0x6e9ec1bfe72412b2!2sUniversidade%20Católica%20do%20Salvador%20-%20UCSal!5e0!3m2!1spt-BR!2sbr!4v1701300591266!5m2!1spt-BR!2sbr"
             allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="main__fareje-content__right">
-          <p><strong>Endereço:</strong> Teacher Aguiar's Dick Avenue, N° 2589, Pituaçu, Salvador - BA </p>
+          <p><strong>Endereço:</strong> Teacher Aguiar's Dick Avenue, N° 2589,<br>Pituaçu, Salvador - BA </p>
           <br>
           <p><strong>CEP:</strong> 41740-090</p>
-          <img src="" alt="">
+          <img src="assets/edificio-doggos.svg" alt="faixada doggos">
         </div>
       </div>
     </section>
