--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
       <img src="./assets/logo-doggos.svg" alt="Logo" height="40px">
       <ul>
         <li><a href="#sobrenos">Sobre nós</a></li>
-        <li><a href="#sobrenos">Serviços</a></li>
-        <li><a href="#sobrenos">Fareje-nos</a></li>
+        <li><a href="#servicos">Serviços</a></li>
+        <li><a href="#farejenos">Fareje-nos</a></li>
       </ul>
       <label class="button-switch">
         <input type="checkbox">
         <span class="slider"></span>
       </label>
-      <button><img src="./assets/menu-icon.svg" alt="button-sidebar" onclick=""></button>
+      <button><img src="./assets/menu-icon.svg" alt="button-sidebar" onclick="showSideBar()"></button>
     </div>
   </nav>
   <nav class="side-bar">
-    <div>aaaaaaaaaaaaaa</div>
+    <div class="w-sb">
+      aaaaaa
+    </div>
   </nav>
   <section>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -51,13 +53,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="./assets/img-dogs.png" alt="First slide" height="512px">
+          <img class="d-block w-100" src="./assets/img-01.png" alt="First slide" height="512px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./assets/img-dogs.png" alt="Second slide" height="512px">
+          <img class="d-block w-100" src="./assets/img-01.png" alt="Second slide" height="512px">
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="./assets/img-dogs.png" alt="Third slide" height="512px">
+          <img class="d-block w-100" src="./assets/img-01.png" alt="Third slide" height="512px">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
