--- a/index.html
+++ b/index.html
@@ -93,20 +93,20 @@
     <div class="divider">
 
       <div class="divider-content">
-        <img src="./assets/pata-white.svg" alt="" class="patinha" height="64px">
+        <img src="./assets/pata-white.svg" alt="" class="patinha-img" alt="patinha-icon">
 
         <div class="linha"></div>
 
       </div>
 
-      <div class="dog-img">
-        <img src="./assets/cachorro pulando.svg" alt="" height="203px">
+      <div class="Jumpdog-div">
+        <img src="./assets/cachorro pulando.svg" alt=""  class="Jumpdog-img">
       </div>
 
       <div class="divider-content">
         <div class="linha"></div>
 
-        <img src="./assets/pata-white.svg" alt="" height="64px">
+        <img src="./assets/pata-white.svg" alt="" class="patinha-img" alt="patinha-icon">
       </div>
     </div>
     <!-- Divider/End -->
