Add: Logica Js da sidebar

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
   </section>
   <main class="main">
-    <section class="main__sobre-nos max-w">
+    <!-- <section class="main__sobre-nos max-w">
       <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
       <div class="main__sobre-nos__txt">
         <h1 class="h1__sobre-nos">SOBRE NÓS</h1>
@@ -87,7 +87,7 @@
           that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',
           making it look like readable English.</p>
       </div>
-    </section>
+    </section> -->
 
     <!-- Divider -->
     <div class="divider">
@@ -100,7 +100,7 @@
       </div>
 
       <div class="Jumpdog-div">
-        <img src="./assets/cachorro pulando.svg" alt=""  class="Jumpdog-img">
+        <img src="./assets/cachorro pulando.svg" alt="" class="Jumpdog-img">
       </div>
 
       <div class="divider-content">
@@ -115,7 +115,8 @@
       <h1>FAREJE-NOS</h1>
       <div class="main__fareje-content">
         <div>
-          <iframe class="main__fareje-content___maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.364551941345!2d-38.41595342408903!3d-12.948508859347045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7161a08d6aaa545%3A0x6e9ec1bfe72412b2!2sUniversidade%20Católica%20do%20Salvador%20-%20UCSal!5e0!3m2!1spt-BR!2sbr!4v1701300591266!5m2!1spt-BR!2sbr"
+          <iframe class="main__fareje-content___maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.364551941345!2d-38.41595342408903!3d-12.948508859347045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7161a08d6aaa545%3A0x6e9ec1bfe72412b2!2sUniversidade%20Católica%20do%20Salvador%20-%20UCSal!5e0!3m2!1spt-BR!2sbr!4v1701300591266!5m2!1spt-BR!2sbr"
             allowfullscreen="" loading="lazy"></iframe>
         </div>
         <div class="main__fareje-content__right">
