--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <section class="main__sobre-nos max-w">
       <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
       <div class="main__sobre-nos__txt">
-        <h1 class="h1__sobre-nos">SOBRE NÓS</h1>
-        <p class="p__sobre-nos">Eduardo Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
+        <h1>SOBRE NÓS</h1>
+        <p>Eduardo Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
           has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
           type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
           into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
