--- a/index.html
+++ b/index.html
@@ -130,6 +130,34 @@
 
 
   </main>
+
+  <footer>
+    
+    <div class="rodape max-w">
+      <div class="cotato-info">
+        <img src="assets/logo-doggos.svg" width="150px" alt="logo Doggos">
+        <h2><img src="assets/insta.svg" alt="insta">@doggos_brasil</h2>
+        <h2><img src="assets/Zap.svg" alt="insta">(71) 91234-1234</h2>
+        <h2><img src="assets/Email.svg" alt="insta">doggosbrasil@gmail.com</h2>
+        <h2>© Copyright 2023 Doggos Brasil </h2>
+      </div><!--fim cotato-info-->
+      <div class="formulario">
+        <h1>CONTATE-NOS</h1>
+        <form action="">
+          <div class="nome"><h3>Nome</h3><input type="text" name="" id="" placeholder="Digite seu nome:" required></div>
+          <div class="email"><h3>E-mail</h3><input type="text" name="" id="" placeholder="Digite seu e-mail:" required></div>
+          <div class="mensage"><h3>Mensagem</h3><textarea name="" id="" placeholder="Sua Mensagem" required></textarea></div>
+      
+          <div class="botao-enviar">
+              <input type="submit" value="Enviar">
+          </div>
+      </form>
+      </div><!--fim formulario-->
+    </div>
+
+  </footer>
+
+
 </body>
 <script src="script.js"></script>
 
