Add itens sidebar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,23 @@
   </nav>
   <nav class="side-bar">
     <div class="w-sb">
-      aaaaaa
+      <a href="#">
+        <img src="./assets/img-sobrenos.svg" alt="">
+        <p>Sobre Nós</p>
+      </a>
+      <a href="#">
+        <img src="./assets/img-servicos.svg" alt="">
+        <p>Serviços</p>
+      </a>
+      <a href="#">
+        <img src="./assets/img-farejenos.svg" alt="">
+        <p>Fareje-nos</p>
+      </a>
+      <a href="#">
+        <img src="./assets/img-voltar.svg" alt="">
+        <p>Sair</p>
+      </a>
+
     </div>
   </nav>
   <section>
