Add itens sidebar

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   </main>
 
   <footer>
-    
+
     <div class="rodape max-w">
       <div class="cotato-info">
         <img src="assets/logo-doggos.svg" width="150px" alt="logo Doggos">
@@ -177,14 +177,20 @@
       <div class="formulario">
         <h1>CONTATE-NOS</h1>
         <form action="">
-          <div class="nome"><h3>Nome</h3><input type="text" name="" id="" placeholder="Digite seu nome:" required></div>
-          <div class="email"><h3>E-mail</h3><input type="text" name="" id="" placeholder="Digite seu e-mail:" required></div>
-          <div class="mensage"><h3>Mensagem</h3><textarea name="" id="" placeholder="Sua Mensagem" required></textarea></div>
-      
-          <div class="botao-enviar">
-              <input type="submit" value="Enviar">
+          <div class="nome">
+            <h3>Nome</h3><input type="text" name="" id="" placeholder="Digite seu nome:" required>
           </div>
-      </form>
+          <div class="email">
+            <h3>E-mail</h3><input type="text" name="" id="" placeholder="Digite seu e-mail:" required>
+          </div>
+          <div class="mensage">
+            <h3>Mensagem</h3><textarea name="" id="" placeholder="Sua Mensagem" required></textarea>
+          </div>
+
+          <div class="botao-enviar">
+            <input type="submit" value="Enviar">
+          </div>
+        </form>
       </div><!--fim formulario-->
     </div>
 
