update: sobre nós - mobile & desktop

--- a/index.html
+++ b/index.html
@@ -84,9 +84,18 @@
       </a>
     </div>
   </section>
+
+  <!-- Sobre Nós -->
   <main class="main">
     <section class="main__sobre-nos max-w">
-      <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
+      <img class="sn-img-desk" src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
+        <div class="sn-mobile">
+          <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
+          <div class="sn-mobile-title">
+            <h1>SOBRE</h1><h1>NÓS</h1>
+          </div>
+          <img class="claw-sn" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
+        </div>
       <div class="main__sobre-nos__txt">
         <h1>SOBRE NÓS</h1>
         <p>Eduardo Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
@@ -101,7 +110,9 @@
       </div>
     </section>
 
-    <section class="sn">
+    <!-- Fim Sobre Nós -->
+
+    <!-- <section class="sn">
       <div class="max-w content-sn">
         <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
         <div class="main__sobre-nos__txt">
@@ -120,7 +131,7 @@
             making it look like readable English.</p>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Divider -->
     <div class="divider">
