update: sobre nos - mobile & desktop

--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         <div class="sn-mobile">
           <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
           <div class="sn-mobile-title">
-            <h1>SOBRE</h1><h1>NÓS</h1>
+            <h1>SOBRE</h1>
+            <h1>NÓS</h1>
           </div>
           <img class="claw-sn" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
         </div>
