--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
 
     <div class="rodape max-w">
       <div class="cotato-info">
-        <img src="assets/logo-doggos.svg" width="150px" alt="logo Doggos">
+        <img class="logo" src="assets/logo-doggos.svg" width="150px" alt="logo Doggos">
         <h2><img src="assets/insta.svg" alt="insta">@doggos_brasil</h2>
-        <h2><img src="assets/Zap.svg" alt="insta">(71) 91234-1234</h2>
+        <h2><img src="assets/Zap.svg" alt="insta">(71) 9 4002-8922</h2>
         <h2><img src="assets/Email.svg" alt="insta">doggosbrasil@gmail.com</h2>
         <h2>© Copyright 2023 Doggos Brasil </h2>
       </div><!--fim cotato-info-->
