Update Fareje-nos: Mobile

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
           <p><strong>Endereço:</strong> Teacher Aguiar's Dick Avenue, N° 2589,<br>Pituaçu, Salvador - BA </p>
 
           <p><strong>CEP:</strong> 41740-090</p>
-          <img src="assets/edificio-doggos.svg" alt="faixada doggos">
+          <img  class="main_faixada" src="assets/edificio-doggos.svg" alt="faixada doggos">
         </div>
       </div>
     </section>
