UPDATE: Footer-Mobile

--- a/index.html
+++ b/index.html
@@ -181,10 +181,12 @@
     <div class="rodape max-w">
       <div class="cotato-info">
         <img class="logo" src="assets/logo-doggos.svg" width="150px" alt="logo Doggos">
+        <div class="conteudos-img-txt">
         <h2><img src="assets/insta.svg" alt="insta">@doggos_brasil</h2>
         <h2><img src="assets/Zap.svg" alt="insta">(71) 9 4002-8922</h2>
         <h2><img src="assets/Email.svg" alt="insta">doggosbrasil@gmail.com</h2>
         <h2>© Copyright 2023 Doggos Brasil </h2>
+      </div>
       </div><!--fim cotato-info-->
       <div class="formulario">
         <h1>CONTATE-NOS</h1>
