--- a/index.html
+++ b/index.html
@@ -87,16 +87,16 @@
 
   <!-- Sobre Nós -->
   <main class="main">
-    <section class="main__sobre-nos max-w">
+    <section id="sobrenos" class="main__sobre-nos max-w">
       <img class="sn-img-desk" src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
-        <div class="sn-mobile">
-          <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
-          <div class="sn-mobile-title">
-            <h1>SOBRE</h1>
-            <h1>NÓS</h1>
-          </div>
-          <img class="claw-sn" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
+      <div class="sn-mobile">
+        <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
+        <div class="sn-mobile-title">
+          <h1>SOBRE</h1>
+          <h1>NÓS</h1>
         </div>
+        <img class="claw-sn" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
+      </div>
       <div class="main__sobre-nos__txt">
         <h1>SOBRE NÓS</h1>
         <p>Eduardo Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
@@ -111,94 +111,57 @@
       </div>
     </section>
 
-    <!-- Fim Sobre Nós -->
-
-    <!-- <section class="sn">
-      <div class="max-w content-sn">
-        <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
-        <div class="main__sobre-nos__txt">
-          <h1 class="h1__sobre-nos">SOBRE NÓS</h1>
-          <p class="p__sobre-nos">Eduardo Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-            Ipsum
-            has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-            type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the
-            leap
-            into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the
-            release
-            of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum. It is a long established fact that a reader will be
-            distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is
-            that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',
-            making it look like readable English.</p>
-        </div>
-      </div>
-    </section> -->
-
     <!-- Divider -->
     <div class="divider">
-
-      <div class="divider-content">
+      <div class="max-w">
         <img src="./assets/pata-white.svg" alt="" class="patinha-img" alt="patinha-icon">
-
         <div class="linha"></div>
-
-      </div>
-
-      <div class="Jumpdog-div">
-        <img src="./assets/cachorro pulando.svg" alt="" class="Jumpdog-img">
-      </div>
-
-      <div class="divider-content">
+        <img src="./assets/cachorro pulando.svg" alt="" class="dog-img">
         <div class="linha"></div>
-
         <img src="./assets/pata-white.svg" alt="" class="patinha-img" alt="patinha-icon">
       </div>
     </div>
     <!-- Divider/End -->
 
-    <section class="main__fareje">
-      <h1>FAREJE-NOS</h1>
-      <div class="main__fareje-content">
-        <div>
+    <section id="farejenos" class="main__fareje">
+      <div class="max-w">
+        <h1>FAREJE-NOS</h1>
+        <div class="main__fareje-content">
           <iframe class="main__fareje-content___maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888.364551941345!2d-38.41595342408903!3d-12.948508859347045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7161a08d6aaa545%3A0x6e9ec1bfe72412b2!2sUniversidade%20Católica%20do%20Salvador%20-%20UCSal!5e0!3m2!1spt-BR!2sbr!4v1701300591266!5m2!1spt-BR!2sbr"
             allowfullscreen="" loading="lazy"></iframe>
-        </div>
-        <div class="main__fareje-content__right">
-          <p><strong>Endereço:</strong> Teacher Aguiar's Dick Avenue, N° 2589,<br>Pituaçu, Salvador - BA </p>
-
-          <p><strong>CEP:</strong> 41740-090</p>
-          <img  class="main_faixada" src="assets/edificio-doggos.svg" alt="faixada doggos">
+          <div class="main__fareje-content__right">
+            <p><strong>Endereço:</strong> Teacher Aguiar's Dick Avenue, N° 2589, Pituaçu, Salvador - BA </p>
+            <p><strong>CEP:</strong> 41740-090</p>
+            <img class="main_faixada" src="assets/edificio-doggos.svg" alt="faixada doggos">
+          </div>
         </div>
       </div>
     </section>
-
-
   </main>
 
   <footer>
-
     <div class="rodape max-w">
       <div class="cotato-info">
         <img class="logo" src="assets/logo-doggos.svg" width="150px" alt="logo Doggos">
         <div class="conteudos-img-txt">
-        <h2><img src="assets/insta.svg" alt="insta">@doggos_brasil</h2>
-        <h2><img src="assets/Zap.svg" alt="insta">(71) 9 4002-8922</h2>
-        <h2><img src="assets/Email.svg" alt="insta">doggosbrasil@gmail.com</h2>
-        <h2>© Copyright 2023 Doggos Brasil </h2>
-      </div>
+          <h2><img src="assets/insta.svg" alt="insta">@doggos_brasil</h2>
+          <h2><img src="assets/Zap.svg" alt="insta">(71) 9 4002-8922</h2>
+          <h2><img src="assets/Email.svg" alt="insta">doggosbrasil@gmail.com</h2>
+          <h2>© Copyright 2023 Doggos Brasil </h2>
+        </div>
       </div><!--fim cotato-info-->
       <div class="formulario">
         <h1>CONTATE-NOS</h1>
         <form action="">
           <div class="nome">
-            <h3>Nome</h3><input type="text" name="" id="" placeholder="Digite seu nome:" required>
+            <label>Nome</label><input type="text" name="" id="" placeholder="Digite seu nome:" required>
           </div>
           <div class="email">
-            <h3>E-mail</h3><input type="text" name="" id="" placeholder="Digite seu e-mail:" required>
+            <label>E-mail</label><input type="text" name="" id="" placeholder="Digite seu e-mail:" required>
           </div>
           <div class="mensage">
-            <h3>Mensagem</h3><textarea name="" id="" placeholder="Sua Mensagem" required></textarea>
+            <label>Mensagem</label><textarea name="" id="" placeholder="Sua Mensagem" required></textarea>
           </div>
 
           <div class="botao-enviar">
@@ -207,10 +170,7 @@
         </form>
       </div><!--fim formulario-->
     </div>
-
   </footer>
-
-
 </body>
 <script src="script.js"></script>
 
