--- a/index.html
+++ b/index.html
@@ -153,19 +153,19 @@
       </div><!--fim cotato-info-->
       <div class="formulario">
         <h1>CONTATE-NOS</h1>
-        <form action="">
+        <form action="" class="form-contact">
           <div class="nome">
-            <label>Nome</label><input type="text" name="" id="" placeholder="Digite seu nome:" required>
+            <label>Nome</label><input type="text" name="" id="name" placeholder="Digite seu nome:" required>
           </div>
           <div class="email">
-            <label>E-mail</label><input type="text" name="" id="" placeholder="Digite seu e-mail:" required>
+            <label>E-mail</label><input type="text" name="" id="email" placeholder="Digite seu e-mail:" required>
           </div>
           <div class="mensage">
-            <label>Mensagem</label><textarea name="" id="" placeholder="Sua Mensagem" required></textarea>
+            <label>Mensagem</label><textarea name="" id="message" placeholder="Sua Mensagem" required></textarea>
           </div>
 
           <div class="botao-enviar">
-            <input type="submit" value="Enviar">
+            <input type="submit" id="enviarbtn" value="Enviar">
           </div>
         </form>
       </div><!--fim formulario-->
@@ -173,5 +173,6 @@
   </footer>
 </body>
 <script src="script.js"></script>
+<script src="smtp.js"></script>
 
 </html>
