Update: footer responsivo, alteração na rolagem dos links

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <ul>
         <li><a href="#sobrenos">Sobre nós</a></li>
         <li><a href="#servicos">Serviços</a></li>
-        <li><a href="#farejenos">Fareje-nos</a></li>
+        <li><a href="#Linha">Fareje-nos</a></li>
       </ul>
       <label class="button-switch">
         <input type="checkbox" onclick="console.log('clicado')">
@@ -41,19 +41,19 @@
   </nav>
   <nav class="side-bar">
     <div class="w-sb">
-      <a href="#">
+      <a href="#sobrenos">
         <img src="./assets/img-sobrenos.svg" alt="">
         <p>Sobre Nós</p>
       </a>
-      <a href="#">
+      <a href="#servicos">
         <img src="./assets/img-servicos.svg" alt="">
         <p>Serviços</p>
       </a>
-      <a href="#">
+      <a href="#Linha">
         <img src="./assets/img-farejenos.svg" alt="">
         <p>Fareje-nos</p>
       </a>
-      <a href="#">
+      <a href="https://www.google.com.br/?hl=pt-BR">
         <img src="./assets/img-voltar.svg" alt="">
         <p>Sair</p>
       </a>
@@ -117,7 +117,7 @@
         <img src="./assets/pata-white.svg" alt="" class="patinha-img" alt="patinha-icon">
         <div class="linha"></div>
         <img src="./assets/cachorro pulando.svg" alt="" class="dog-img">
-        <div class="linha"></div>
+        <div class="linha" id="Linha"></div>
         <img src="./assets/pata-white.svg" alt="" class="patinha-img" alt="patinha-icon">
       </div>
     </div>
@@ -148,7 +148,7 @@
           <h2><img src="assets/insta.svg" alt="insta">@doggos_brasil</h2>
           <h2><img src="assets/Zap.svg" alt="insta">(71) 9 4002-8922</h2>
           <h2><img src="assets/Email.svg" alt="insta">doggosbrasil@gmail.com</h2>
-          <h2>© Copyright 2023 Doggos Brasil </h2>
+          <h2 class="copyright">© Copyright 2023 Doggos Brasil </h2>
         </div>
       </div><!--fim cotato-info-->
       <div class="formulario">
