--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Doggos PetShop</title>
+
   <link rel="shortcut icon" href="assets/doggos.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -33,7 +34,7 @@
         <li><a href="#Linha">Fareje-nos</a></li>
       </ul>
       <label class="button-switch">
-        <input type="checkbox" onclick="console.log('clicado')">
+        <input id="checkbox" type="checkbox">
         <span class="slider"></span>
       </label>
       <button><img src="./assets/menu-icon.svg" alt="button-sidebar" onclick="showSideBar()"></button>
@@ -42,22 +43,17 @@
   <nav class="side-bar">
     <div class="w-sb">
       <a href="#sobrenos">
-        <img src="./assets/img-sobrenos.svg" alt="">
+        <img src="./assets/img-sobrenos.svg" alt="Sobre nós" width="24px">
         <p>Sobre Nós</p>
       </a>
       <a href="#servicos">
-        <img src="./assets/img-servicos.svg" alt="">
+        <img src="./assets/img-servicos.svg" alt="Serviços" height="24px">
         <p>Serviços</p>
       </a>
-      <a href="#Linha">
-        <img src="./assets/img-farejenos.svg" alt="">
+      <a href="#farejenos">
+        <img src="./assets/img-farejenos.svg" alt="Farejenos" width="24px">
         <p>Fareje-nos</p>
       </a>
-      <a href="https://www.google.com.br/?hl=pt-BR">
-        <img src="./assets/img-voltar.svg" alt="">
-        <p>Sair</p>
-      </a>
-
     </div>
   </nav>
   <section>
@@ -94,8 +90,8 @@
         <div class="sn-mobile-title">
           <h1>SOBRE</h1>
           <h1>NÓS</h1>
+          <img class="claw-sn" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
         </div>
-        <img class="claw-sn" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
       </div>
       <div class="main__sobre-nos__txt">
         <h1>SOBRE NÓS</h1>
@@ -111,7 +107,7 @@
       </div>
     </section>
 
-   <!-- Divider -->
+    <!-- Divider -->
     <div class="divider">
       <div class="max-w">
         <img src="./assets/pata-white.svg" alt="" class="patinha-img" alt="patinha-icon">
