--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
   </nav>
   <nav class="side-bar">
     <div class="w-sb">
-      <a href="#sobrenos">
+      <a href="#sobrenos" onclick="showSideBar()">
         <img src="./assets/img-sobrenos.svg" alt="Sobre nós" width="24px">
         <p>Sobre Nós</p>
       </a>
-      <a href="#servicos">
+      <a href="#servicos" onclick="showSideBar()">
         <img src="./assets/img-servicos.svg" alt="Serviços" height="24px">
         <p>Serviços</p>
       </a>
-      <a href="#farejenos">
+      <a href="#farejenos" onclick="showSideBar()">
         <img src="./assets/img-farejenos.svg" alt="Farejenos" width="24px">
         <p>Fareje-nos</p>
       </a>
