fix ids sidebar

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <ul>
         <li><a href="#sobrenos">Sobre nós</a></li>
         <li><a href="#servicos">Serviços</a></li>
-        <li><a href="#Linha">Fareje-nos</a></li>
+        <li><a href="#farejenos">Fareje-nos</a></li>
       </ul>
       <label class="button-switch">
         <input id="checkbox" type="checkbox">
