--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
     <section id="sobrenos" class="main__sobre-nos max-w">
       <img class="sn-img-desk" src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
       <div class="sn-mobile">
-        <img src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
+        <img class="cachorro-sn-mobile768" src="assets/img-sobrenos02.svg" alt="cachorro, fundo roxo Tablet">
+        <img class="cachorro-sn-mobile480" src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
         <div class="sn-mobile-title">
-          <h1>SOBRE</h1>
+          <h1>SOBREﾠ</h1> <!--Botei um caracter invisível.-->
           <h1>NÓS</h1>
           <img class="claw-sn" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
         </div>
@@ -100,10 +101,7 @@
           type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
           into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
           of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-          Aldus PageMaker including versions of Lorem Ipsum. It is a long established fact that a reader will be
-          distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is
-          that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here',
-          making it look like readable English.</p>
+          Aldus PageMaker including versions of Lorem Ipsum.</p>
       </div>
     </section>
 
@@ -119,6 +117,7 @@
     </div>
     <!-- Divider/End -->
 
+    <!-- Fareje-nos-->
     <section id="farejenos" class="main__fareje">
       <div class="max-w">
         <h1>FAREJE-NOS</h1>
