update: texto novinho em folha, tchau eduardo ipsum

--- a/index.html
+++ b/index.html
@@ -96,12 +96,8 @@
       </div>
       <div class="main__sobre-nos__txt">
         <h1>SOBRE NÓS</h1>
-        <p>Eduardo Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-          has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of
-          type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap
-          into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release
-          of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-          Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>Bem-vindo à DOGGOS, seu petshop completo! Oferecemos banho, tosa, vacinação e mais para garantir o melhor para seu pet. Nossa equipe apaixonada proporciona uma experiência única, focada no bem-estar do seu amigo.</p>
+        <p>Na DOGGOS, cada pet é único, recebendo cuidados personalizados. Além dos serviços, temos produtos premium e acessórios de qualidade. Explore nosso site para nos contatar ou conhecer-nos. Aqui, tratamos seus pets como parte da nossa família. Seja bem-vindo à experiência DOGGOS, onde o amor pelos animais é prioridade!</p>
       </div>
     </section>
 
