Add: Butão trocar tema no sidebar

--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@
         <img src="./assets/img-farejenos.svg" alt="Farejenos" width="24px">
         <p>Fareje-nos</p>
       </a>
+      <a href="#farejenos" onclick="trocarTema()">
+        <div class="img-theme"></div>
+        <p>Mudar Tema</p>
+      </a>
     </div>
   </nav>
   <section>
@@ -96,8 +100,11 @@
       </div>
       <div class="main__sobre-nos__txt">
         <h1>SOBRE NÓS</h1>
-        <p>Bem-vindo à DOGGOS, seu petshop completo! Oferecemos banho, tosa, vacinação e mais para garantir o melhor para seu pet. Nossa equipe apaixonada proporciona uma experiência única, focada no bem-estar do seu amigo.</p>
-        <p>Na DOGGOS, cada pet é único, recebendo cuidados personalizados. Além dos serviços, temos produtos premium e acessórios de qualidade. Explore nosso site para nos contatar ou conhecer-nos. Aqui, tratamos seus pets como parte da nossa família. Seja bem-vindo à experiência DOGGOS, onde o amor pelos animais é prioridade!</p>
+        <p>Bem-vindo à DOGGOS, seu petshop completo! Oferecemos banho, tosa, vacinação e mais para garantir o melhor
+          para seu pet. Nossa equipe apaixonada proporciona uma experiência única, focada no bem-estar do seu amigo.</p>
+        <p>Na DOGGOS, cada pet é único, recebendo cuidados personalizados. Além dos serviços, temos produtos premium e
+          acessórios de qualidade. Explore nosso site para nos contatar ou conhecer-nos. Aqui, tratamos seus pets como
+          parte da nossa família. Seja bem-vindo à experiência DOGGOS, onde o amor pelos animais é prioridade!</p>
       </div>
     </section>
 
