Add: Butão trocar tema no sidebar

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <img src="./assets/img-farejenos.svg" alt="Farejenos" width="24px">
         <p>Fareje-nos</p>
       </a>
-      <a href="#farejenos" onclick="trocarTema()">
+      <a onclick="trocarTema()">
         <div class="img-theme"></div>
         <p>Mudar Tema</p>
       </a>
