Apagando espaço invisivel

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <img class="cachorro-sn-mobile768" src="assets/img-sobrenos02.svg" alt="cachorro, fundo roxo Tablet">
         <img class="cachorro-sn-mobile480" src="./assets/cachorro-fundoroxo.png" alt="cachorro, fundo roxo">
         <div class="sn-mobile-title">
-          <h1>SOBREﾠ</h1> <!--Botei um caracter invisível.-->
+          <h1>SOBRE</h1> <!--Botei um caracter invisível.-->
           <h1>NÓS</h1>
           <img class="claw-sn" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
         </div>
