Add: scroll bar personalizado

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         <div class="sn-mobile-title">
           <h1>SOBRE</h1> <!--Botei um caracter invisível.-->
           <h1>NÓS</h1>
-          <img class="claw-sn" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
+          <img class="claw-sn pata-light" src="assets/pata-roxa-52057B.svg" alt="pata-52057B">
+          <img class="claw-sn pata-dark" src="assets/pata-white.svg" alt="pata-white">
         </div>
       </div>
       <div class="main__sobre-nos__txt">
