update: carrossel de serviços adicionado

--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/embla-carousel-wheel-gestures/dist/embla-carousel-wheel-gestures.umd.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <link
+  rel="stylesheet"
+  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+/>
 </head>
 
 <body>
@@ -107,6 +113,35 @@
           acessórios de qualidade. Explore nosso site para nos contatar ou conhecer-nos. Aqui, tratamos seus pets como
           parte da nossa família. Seja bem-vindo à experiência DOGGOS, onde o amor pelos animais é prioridade!</p>
       </div>
+    </section>
+
+    <section class="main__service">
+      <h1 class="h1__service__txt">SERVIÇOS</h1>
+      <div class="carousel__body">
+
+    <div class="swiper">
+
+      <div class="swiper-wrapper">
+
+        <div class="swiper-slide">
+          <img class="carousel__imgs" src="./assets/banho.webp" alt="cacouro de touca,fundo roxo" height="276px">
+        </div>
+        <div class="swiper-slide">
+          <img class="carousel__imgs" src="./assets/tosa.webp" alt="cacouro de touca,fundo roxo" height="276px">
+        </div>
+        <div class="swiper-slide">
+          <img class="carousel__imgs" src="./assets/vacinacao.webp" alt="cacouro de touca,fundo roxo" height="276px">
+        </div>
+        ...
+      </div>
+
+      <div class="swiper-pagination"></div>
+
+      <div class="swiper-button-prev"></div>
+      <div class="swiper-button-next"></div>
+
+    </div>
+
     </section>
 
     <!-- Divider -->
