Update servicos responsivo

--- a/index.html
+++ b/index.html
@@ -115,22 +115,22 @@
       </div>
     </section>
 
-    <section class="main__service">
+    <section id="servicos" class="main__service max-w">
       <h1 class="h1__service__txt">SERVIÇOS</h1>
       <div class="carousel__body">
 
-    <div class="swiper">
+    <div class="swiper max-w">
 
       <div class="swiper-wrapper">
 
         <div class="swiper-slide">
-          <img class="carousel__imgs" src="./assets/banho.webp" alt="cacouro de touca,fundo roxo" height="276px">
+          <img class="carousel__imgs" src="./assets/banho.webp" alt="cacouro de touca,fundo roxo">
         </div>
         <div class="swiper-slide">
-          <img class="carousel__imgs" src="./assets/tosa.webp" alt="cacouro de touca,fundo roxo" height="276px">
+          <img class="carousel__imgs" src="./assets/tosa.webp" alt="cacouro de touca,fundo roxo">
         </div>
         <div class="swiper-slide">
-          <img class="carousel__imgs" src="./assets/vacinacao.webp" alt="cacouro de touca,fundo roxo" height="276px">
+          <img class="carousel__imgs" src="./assets/vacinacao.webp" alt="cacouro de touca,fundo roxo">
         </div>
         ...
       </div>
