Fix carrosel serviços

--- a/index.html
+++ b/index.html
@@ -22,12 +22,9 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
-    <script src="https://unpkg.com/embla-carousel-wheel-gestures/dist/embla-carousel-wheel-gestures.umd.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
+  <script src="https://unpkg.com/embla-carousel-wheel-gestures/dist/embla-carousel-wheel-gestures.umd.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 </head>
 
 <body>
@@ -115,32 +112,31 @@
       </div>
     </section>
 
-    <section id="servicos" class="main__service max-w">
+    <section id="servicos" class="main__service">
       <h1 class="h1__service__txt">SERVIÇOS</h1>
-      <div class="carousel__body">
+      <div class="carousel__body max-w">
 
-    <div class="swiper max-w">
+        <div class="swiper">
 
-      <div class="swiper-wrapper">
+          <div class="swiper-wrapper">
 
-        <div class="swiper-slide">
-          <img class="carousel__imgs" src="./assets/banho.webp" alt="cacouro de touca,fundo roxo">
+            <div class="swiper-slide">
+              <img class="carousel__imgs" src="./assets/banho.png" alt="cacouro de touca,fundo roxo">
+            </div>
+            <div class="swiper-slide">
+              <img class="carousel__imgs" src="./assets/tosa.png" alt="cacouro de touca,fundo roxo">
+            </div>
+            <div class="swiper-slide">
+              <img class="carousel__imgs" src="./assets/vacina.png" alt="cacouro de touca,fundo roxo">
+            </div>
+          </div>
+
+          <div class="swiper-pagination"></div>
+
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+
         </div>
-        <div class="swiper-slide">
-          <img class="carousel__imgs" src="./assets/tosa.webp" alt="cacouro de touca,fundo roxo">
-        </div>
-        <div class="swiper-slide">
-          <img class="carousel__imgs" src="./assets/vacinacao.webp" alt="cacouro de touca,fundo roxo">
-        </div>
-        ...
-      </div>
-
-      <div class="swiper-pagination"></div>
-
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-
-    </div>
 
     </section>
 
