Raname img vacina

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
               <img class="carousel__imgs" src="./assets/tosa.png" alt="cacouro de touca,fundo roxo">
             </div>
             <div class="swiper-slide">
-              <img class="carousel__imgs" src="./assets/vacina.png" alt="cacouro de touca,fundo roxo">
+              <img class="carousel__imgs" src="./assets/vacinacao.png" alt="cacouro de touca,fundo roxo">
             </div>
           </div>
 
